Brings refresh tokens more in line with spec
Still work to do with the magic permission however.
