# src/main/resources/openapi/token-1.0.yaml
@@ -27,7 +27,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/token"
+                $ref: "#/components/schemas/tokenResponseLegacy"
         "400":
           $ref: "#/components/responses/trait_400"
         "500":
@@ -49,23 +49,23 @@ paths:
         required: true
       responses:
         "201":
-          description: Created and signed token successfully
+          description: Created and signed tokens successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/token"
+                $ref: "#/components/schemas/tokenResponse"
         "400":
           $ref: "#/components/responses/trait_400"
         "500":
           $ref: "#/components/responses/trait_500"
 
-  /refresh:
+  /token/refresh:
     parameters:
       - $ref: headers/okapi-tenant-required.yaml
       - $ref: headers/okapi-url-required.yaml
     post:
       description: Sign token
-      operationId: refresh
+      operationId: token-refresh
       requestBody:
         content:
           application/json:
@@ -74,35 +74,11 @@ paths:
         required: true
       responses:
         "201":
-          description: Created and signed token successfully
+          description: Refreshed tokens successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/token"
-        "400":
-          $ref: "#/components/responses/trait_400"
-        "500":
-          $ref: "#/components/responses/trait_500"
-  /refreshtoken:
-    parameters:
-      - $ref: headers/okapi-tenant-required.yaml
-      - $ref: headers/okapi-url-required.yaml
-    post:
-      description: Sign token
-      operationId: refreshtoken
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/signRefreshToken"
-        required: true
-      responses:
-        "201":
-          description: Created and signed token successfully
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/token"
+                $ref: "#/components/schemas/tokenResponse"
         "400":
           $ref: "#/components/responses/trait_400"
         "500":
@@ -130,9 +106,9 @@ components:
   schemas:
     refreshToken:
       $ref: schemas/refreshToken.json
-    signRefreshToken:
-      $ref: schemas/signRefreshToken.json
-    token:
-      $ref: schemas/token.json
+    tokenResponse:
+      $ref: schemas/tokenResponse.json
+    tokenResponseLegacy:
+      $ref: schemas/tokenResponseLegacy.json
     signTokenPayload:
       $ref: schemas/signTokenPayload.json
